# bl-midi2-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_MESSAGE_TEMPLATE  CONTRIBUTING.md  CONTRIBUTOR.md  Cargo.toml  LICENCE_Unicode-DFS-2016  LICENSE_MIT  README.md  cliff.toml  configure-hooks.sh  deny.toml  flake.nix  requirements.txt  shell.nix  temp.py
.github/scripts/: bump-version.sh  configure-release-pat.sh  files-with-current-version-string  last-released-version.sh  setup-git-flow.sh  setup-gitflow.sh
.github/workflows/: ci.yml  clippy.yml  finish-release.yml  gitflow.yml  rust.yml  start-release.yml
builder-derive/: Cargo.toml
builder-derive/src/: lib.rs
examples/: handling_messages.rs
examples/handling_messages/: Cargo.toml
examples/no_std_dynamic_message_generator/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generic_sysex_inserting_payloads.rs  generic_sysex_splicing_payloads.rs  sysex7_payload_roundtrip.rs  sysex8_payload_roundtrip.rs
getters-derive/: Cargo.toml
getters-derive/src/: lib.rs
midi2/: Cargo.toml
midi2-derive/: Cargo.toml
midi2-derive/src/: lib.rs
midi2/src/: buffer.rs  channel_voice1.rs  channel_voice2.rs  conversion.rs  detail.rs  error.rs  flex_data.rs  lib.rs  message.rs  packet.rs  packets.rs  sysex7.rs  sysex8.rs  system_common.rs  traits.rs  ump_stream.rs  utility.rs
midi2/src/channel_voice1/: README.md  control_change.rs  key_pressure.rs  note_off.rs  note_on.rs
midi2/src/channel_voice2/: README.md  assignable_per_note_controller.rs  channel_pitch_bend.rs  channel_pressure.rs  control_change.rs  controller.rs  key_pressure.rs  note_off.rs  note_on.rs  packet.rs  per_note_management.rs  program_change.rs  relative_assignable_controller.rs  relative_registered_controller.rs
midi2/src/ci/: common_properties.rs  discovery.rs
midi2/src/detail/: bit_ops.rs  common_err_strings.rs  common_properties.rs  helpers.rs  property.rs  schema.rs
midi2/src/detail/test_support/: rubbish_payload_iterator.rs
midi2/src/flex_data/: README.md  set_key_signature.rs  set_metronome.rs  set_tempo.rs  set_time_signature.rs  text.rs
midi2/src/sysex7/: README.md  packet.rs
midi2/src/sysex8/: README.md  packet.rs
midi2/src/system_common/: song_position_pointer.rs  time_code.rs
midi2/src/ump_stream/: end_of_clip.rs  endpoint_discovery.rs  endpoint_info.rs  function_block_info.rs  function_block_name.rs  start_of_clip.rs  stream_configuration_notification.rs  stream_configuration_request.rs
midi2/src/utility/: packet.rs
midi2_attr/: Cargo.toml
midi2_attr/src/: lib.rs
midi2_proc/: Cargo.toml  README.md
midi2_proc/src/: common.rs  derives.rs  generate_ci.rs  generate_message.rs  lib.rs
src/: bounded.rs  buffer.rs  builder_tests.rs  channel_voice1.rs  channel_voice2.rs  ci.rs  context.rs  data_pair.rs  detail.rs  error.rs  extended_system_exclusive.rs  flex_data.rs  getter_tests.rs  group.rs  group_id.rs  helpers.rs  lib.rs  message.rs  message_trait.rs  midi1_channel_voice.rs  midi2_channel_voice.rs  packet.rs  packets.rs  profile.rs  result.rs  sysex7.rs  sysex8.rs  system.rs  system_common.rs  system_exclusive.rs  system_message.rs  traits.rs  ump_stream.rs  util.rs  utility.rs
src/channel_voice1/: README.md  channel_pressure.rs  control_change.rs  key_pressure.rs  mod.rs  note_off.rs  note_on.rs  packet.rs  pitch_bend.rs  program_change.rs
src/channel_voice2/: README.md  assignable_controller.rs  assignable_per_note_controller.rs  attribute.rs  channel_pitch_bend.rs  channel_pressure.rs  control_change.rs  controller.rs  key_pressure.rs  mod.rs  note_off.rs  note_on.rs  packet.rs  per_note_management.rs  per_note_pitch_bend.rs  program_change.rs  registered_controller.rs  registered_per_note_controller.rs  relative_assignable_controller.rs  relative_registered_controller.rs
src/ci/: README.md  common_properties.rs  confirm_protocol.rs  device_id.rs  discovery.rs  helpers.rs  initiate_protocol_negotiation.rs  invalidate_muid.rs  message_trait.rs  mod.rs  nak.rs  property.rs  protocol.rs  set_protocol.rs  test_protocol.rs  version.rs
src/detail/: bit_ops.rs  bounded.rs  common_properties.rs  encode_7bit.rs  helpers.rs  property.rs  schema.rs  test_support.rs  truncate.rs
src/flex_data/: README.md  mod.rs  packet.rs  set_chord_name.rs  set_key_signature.rs  set_metronome.rs  set_tempo.rs  set_time_signature.rs  text.rs  tonic.rs  unknown_metadata_text.rs
src/message/: channel_voice_helpers.rs  common_properties.rs  helpers.rs  mod.rs  sysex.rs  sysex7.rs  sysex7_doc.md  sysex_bytes.rs  system_common.rs  system_exclusive.rs  system_exclusive_7bit.rs  system_exclusive_8bit.rs
src/midi1/: channel_voice.rs  channel_voice_message.rs  mod.rs
src/midi1_channel_voice/: channel_pressure.rs  control_change.rs  key_pressure.rs  mod.rs  note_off.rs  note_on.rs  pitch_bend.rs  program_change.rs
src/midi2/: channel_voice.rs  channel_voice_message.rs  ci.rs  controllers.rs  mod.rs  muid.rs  profile.rs
src/midi2_channel_voice/: attribute.rs  channel_voice.rs  controllers.rs  key_pressure.rs  mod.rs  note_off.rs  note_on.rs
src/sysex7/: README.md  mod.rs  packet.rs
src/sysex8/: mod.rs  packet.rs
src/system_common/: README.md  mod.rs  packet.rs  song_position_pointer.rs  song_select.rs  time_code.rs
src/test_support/: debug.rs  mod.rs  random_buffer.rs
src/ump_stream/: device_identity.rs  end_of_clip.rs  endpoint_discovery.rs  endpoint_info.rs  endpoint_name.rs  function_block_discovery.rs  function_block_info.rs  function_block_name.rs  mod.rs  packet.rs  product_instance_id.rs  start_of_clip.rs  stream_configuration_notification.rs  (+2 more)
tests/: integration-tests.rs  messages.rs
util/: to_7bit_array_lsb_first.py
(+138 files in other folders)
