[package]
name = "midi2"
version = "0.1.0"
description = "A helper library for dealing with midi 2 byte data."
edition = "2021"
readme = "README.md"
authors = [
    "Ben Leadbetter <ben.leadbetter@hotmail.com>",
]

[features]
default = ["ci", "midi2-channel-voice"]
ci = ["sysex-bytes"]
flex-data = []
midi1-channel-voice = []
midi2-channel-voice = []
std = []
sysex-bytes = []
sysex7 = []
sysex8 = []
system-common = []
ump-stream = []
utility = []

[dependencies]
derive_more = { version = "0.99.17", features = ["from"], default-features = false }
midi2_attr = { version = "0.1.0", path = "midi2_attr" }
ux = "0.1.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
