[package]
name = "midi2"
version = "0.2.1"
description = "Ergonomic, versatile, strong types wrapping MIDI 2.0 message data."
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    "Ben Leadbetter <ben.leadbetter@hotmail.com>",
]
repository = "git@github.com:BenLeadbetter/midi2.git"

[workspace]
members = [
    "midi2_proc",
]

[lib]
name = "midi2"
path = "src/lib.rs" 

[features]
default = ["ci", "midi2-channel-voice"]
ci = ["sysex7"]
flex-data = []
midi1-channel-voice = []
midi2-channel-voice = []
std = []
sysex7 = []
sysex8 = []
system-common = []
ump-stream = []

[dependencies]
derive_more = { version = "0.99.17", features = ["from"], default-features = false }
midi2_proc = { version = "0.1.0", path = "midi2_proc" }
ux = "0.1.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
