[package]
edition = "2021"
name = "midi2-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = [
    "derive",
] }
rand = "0.9.1"

[dependencies.midi2]
path = "../midi2"
default-features = false
features = [
    "std",
    "sysex8",
    "sysex7",
]

[[bin]]
name = "sysex8_payload_roundtrip"
path = "./fuzz_targets/sysex8_payload_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sysex7_payload_roundtrip"
path = "./fuzz_targets/sysex7_payload_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generic_sysex_splicing_payloads"
path = "./fuzz_targets/generic_sysex_splicing_payloads.rs"
test = false
doc = false
bench = false
