[package]
name = "midi2_proc"
description = "Internal procedural macro crate. Only intended for use with midi2"
version = "0.8.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    "Ben Leadbetter <ben.leadbetter@hotmail.com>",
]
repository = "https://github.com/BenLeadbetter/midi2.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
